--- a/recall/src/app/app.component.html
+++ b/recall/src/app/app.component.html
@@ -1,3 +1,43 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4 nopadding">
+      <div class="span12">
+      Alumni Logo
+      </div>
+    </div>
+    <div class="col-md-8 nopadding">
+      <div class="span12"> Alumni Association Title</div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 nopadding">
+      <div class="col-md-6 nopadding">
+        <div class="span12"> SVET (link to Vidyanikethan.edu) </div>
+      </div>
+      <div class="col-md-6 nopadding">
+        <div class="span12"> Alumni Chapters</div>
+      </div>      
+    </div>
+    <div class="col-md-8 nopadding">
+      <div class="col-md-2 nopadding">
+        <div class="span12"> Alumni Directory </div>
+      </div>
+      <div class="col-md-2 nopadding">
+        <div class="span12"> Community </div>
+      </div>     
+      <div class="col-md-2 nopadding">
+        <div class="span12"> Gallery </div>
+      </div>
+      <div class="col-md-2 nopadding">
+        <div class="span12"> Giving to Vidyanikethan </div>
+      </div>     
+      <div class="col-md-2 nopadding">
+        <div class="span12">Testimonials </div>
+      </div>
+      <div class="col-md-2 nopadding">
+        <div class="span12"> Contacts </div>
+      </div>     
+    </div>
+  </div>
+  <hr>
+</div>
