--- a/recall/src/app/app.component.html
+++ b/recall/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div class="container-fluid">
+<div class="container" style="
+border: 1px solid black;
+">
   <div class="row">
     <div class="col-md-4 nopadding">
-      <div class="span12">
+      <div class="span12 " >
       Alumni Logo
       </div>
     </div>
@@ -40,4 +42,41 @@
     </div>
   </div>
   <hr>
+  <div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 nopadding left">
+      <div class="span12 col">
+        Login Area, Alumni Registration & Details Updation Links to like on FB, Twitter, Linkedin, Google Circles, Etc. (optionally, we can have logins from these)
+      </div>
+      <div class="span12 col">
+        <p>Quiz Arena (answers should be sent to Alumni Relations Officer with in stipulated amount of time).</p>
+      </div>
+    </div>
+    <div class="col-md-6 nopadding center">
+      <div class="span12 col">
+        Institutional Information in interest of Alumni, like messages from Chairman & CEO's to Alumni.
+
+
+
+Important message conveying area, like Alumni Day, Awards to Alumni or Alumni events in the institutions/chapters, etc.
+
+
+
+Latest happenings in institutions
+
+      </div>
+    </div>
+    <div class="col-md-3 nopadding right">
+      <div class="span12 col">
+        Alumni Profiles
+      </div>
+      <div class="span12 col">
+        Hall of the fame (Quarterly)
+
+        Birthday & Anniversary celebrations
+        
+      </div>
+    </div>
+    </div>
 </div>
