--- a/recall/src/app/app.component.css
+++ b/recall/src/app/app.component.css
@@ -1,7 +1,16 @@
 .col-md-4,.col-md-8,.col-md-6,.col-md-2,.col-md-3,.col
 {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 40px;
+}
+
+.row{
+    border: 1px solid black;   
+    margin-left: 0px;
+    margin-right: 0px;
+}
+.leftBorder{
+    border-left: 1px solid;
 }
 
 .left .col{
@@ -27,6 +36,7 @@
      height: 100%;
      justify-content: center;
      align-items: center;
+     padding-left: 10px;
  }
 
  hr {
@@ -38,10 +48,11 @@
 }
 
 .selectables{
-    background: blue;
+    background: grey;
     color: white;
     font-family: sans-serif;
-    font-size: large;
+    font-size: 15px;
+    font-weight: bold;
     font-variant: all-petite-caps;
     cursor: pointer;
 }
