--- a/recall/src/app/app.component.html
+++ b/recall/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="row" style="position: fixed;width: 100%;">
 <div class="row">
   <div>
   <div class="col-md-4 selectables">
@@ -42,11 +43,9 @@
     </div>     
   </div>
 </div>
-
+</div>
 <div class="globalcontainer" >
-
-
-  <hr>
+  <br>
   <div>
   </div>
   <div class="row">
@@ -55,7 +54,7 @@
         Login Area, Alumni Registration & Details Updation Links to like on FB, Twitter, Linkedin, Google Circles, Etc. (optionally, we can have logins from these)
       </div>
       <div class="span12 col">
-        <p>Quiz Arena (answers should be sent to Alumni Relations Officer with in stipulated amount of time).</p>
+        Quiz Arena (answers should be sent to Alumni Relations Officer with in stipulated amount of time).
       </div>
     </div>
     <div class="col-md-8 selectables center">
@@ -65,7 +64,7 @@ Important message conveying area, like Alumni Day, Awards to Alumni or Alumni ev
 Latest happenings in institutions
 
       </div>
-      <div *ngIf="selectedTab.gtv" class="span12 col" style="overflow: scroll;display: block;">
+      <div *ngIf="selectedTab.gtv" class="span12 col" style="color:black;display: block;">
         Giving to Vidyanikethan
         Facebook is an American online social media and social networking service based in Menlo Park, California and a flagship service of the namesake company Facebook, Inc. It was founded by Mark Zuckerberg, along with fellow Harvard College students and roommates Eduardo Saverin, Andrew McCollum, Dustin Moskovitz and Chris Hughes.
 
