--- a/recall/src/app/app.component.html
+++ b/recall/src/app/app.component.html
@@ -97,7 +97,7 @@ The Facebook service can be accessed from devices with Internet connectivity, su
 
 Facebook has been subject to extensive media coverage and many controversies. These often involve user privacy (as with the Cambridge Analytica data scandal), political manipulation (as with the 2016 U.S. elections), psychological effects such as addiction and low self-esteem, and content that some users find objectionable, including fake news, conspiracy theories, and copyright infringement.[9] Commentators have accused Facebook of helping to spread false information and fake news.[10][11][12][13] In 2017, Facebook partnered with fact checkers from the Poynter Institute's International Fact-Checking Network to identify and mark false content, though most ads from political candidates are exempt from this program.[14][15] Critics of the program accuse Facebook of not doing enough to remove false information from its website.[16] Facebook was the most downloaded mobile app of the 2010s globally.[17]
       </div>
-      <div *ngIf="selectedTab.testimonial" class="span12 col">
+      <div *ngIf="selectedTab.testimonial" class="span12 col" style="padding-left: 0px;">
         <app-testimonial></app-testimonial>
       </div>
       <div *ngIf="selectedTab.contacts" class="span12 col">
