--- a/recall/src/app/testimonial/testimonial.component.css
+++ b/recall/src/app/testimonial/testimonial.component.css
@@ -42,9 +42,9 @@
 .iconDetails {
 /* margin-left:2%; */
 float:left; 
-height:200px;
-width:170px; 
-/* margin-top:20px; */
+height:170px;
+width:130px; 
+ margin-top:2%; 
 } 
 
 .container2 {
