--- a/recall/src/app/testimonial/testimonial.component.html
+++ b/recall/src/app/testimonial/testimonial.component.html
@@ -3,10 +3,22 @@
       Testimonial
   </div>
 <div class='container2'>
+  <b>check once https://www.w3schools.com/bootstrap4/bootstrap_cards.asp</b>
   <div>
       <img src='D:/Naveen/mb.jpg' class='iconDetails'>
   </div>  
-<div style='margin-left:200px;color:white;'>
+<div style='margin-left:20%;color:white;'>
+<h4>DR. Manchu Mohan Babu <br>Chairman</h4>
+<p id="pg">I have the best memories and biggest learning experiences in life.
+I believe every individual deserves best knowledge to lead a better life and
+knowledge comes with learning – </p>
+</div>	
+<br><br><br><br><br>
+
+<div>
+      <img src='assets/images/Sushet-Gautam.jpg' class='iconDetails'>
+  </div>  
+<div style='margin-left:20%;color:white;'>
 <h4>DR. Manchu Mohan Babu <br>Chairman</h4>
 <p id="pg">I have the best memories and biggest learning experiences in life.
 I believe every individual deserves best knowledge to lead a better life and
@@ -19,20 +31,7 @@ the imbibed knowledge,disconnecting the superficial parts and connecting sensibl
 <div>
       <img src='D:/Naveen/mb.jpg' class='iconDetails'>
   </div>  
-<div style='margin-left:200px;color:white;'>
-<h4>DR. Manchu Mohan Babu <br>Chairman</h4>
-<p id="pg">I have the best memories and biggest learning experiences in life.
-I believe every individual deserves best knowledge to lead a better life and
-knowledge comes with learning – one that is based on doing things right and not merely knowing about how to do them. 
-Learning solutions should be relative to real life, thereby motivating the learner towards gaining and applying 
-the imbibed knowledge,disconnecting the superficial parts and connecting sensible aspects.</p>
-</div>	
-<br><br><br><br><br>
-
-<div>
-      <img src='D:/Naveen/mb.jpg' class='iconDetails'>
-  </div>  
-<div style='margin-left:200px;color:white;'>
+<div style='margin-left:20%;color:white;'>
 <h4>DR. Manchu Mohan Babu <br>Chairman</h4>
 <p id="pg">I have the best memories and biggest learning experiences in life.
 I believe every individual deserves best knowledge to lead a better life and
