--- a/recall/src/app/testimonial/testimonial.component.html
+++ b/recall/src/app/testimonial/testimonial.component.html
@@ -5,7 +5,7 @@
 <div class='container2'>
   <b>check once https://www.w3schools.com/bootstrap4/bootstrap_cards.asp</b>
   <div>
-      <img src='D:/Naveen/mb.jpg' class='iconDetails'>
+      <img src='assets/images/download.jpg' class='iconDetails'>
   </div>  
 <div style='margin-left:20%;color:white;'>
 <h4>DR. Manchu Mohan Babu <br>Chairman</h4>
@@ -29,7 +29,7 @@ the imbibed knowledge,disconnecting the superficial parts and connecting sensibl
 <br><br><br><br><br>
 
 <div>
-      <img src='D:/Naveen/mb.jpg' class='iconDetails'>
+      <img src='assets/images/download.jpg' class='iconDetails'>
   </div>  
 <div style='margin-left:20%;color:white;'>
 <h4>DR. Manchu Mohan Babu <br>Chairman</h4>
