--- a/recall/src/app/login-alumni/login-alumni.component.html
+++ b/recall/src/app/login-alumni/login-alumni.component.html
@@ -1,12 +1,7 @@
-<div class="signin-form">
-  <form action="/examples/actions/confirmation.php" method="post">
+<div class="signin-form form">
+  <div class="form">
+  <!-- <form action="/examples/actions/confirmation.php" method="post"> -->
   <h2>Sign in</h2>
-  <div class="social-btn text-center">
-    <a href="#" class="btn btn-primary btn-lg" title="Facebook"><i class="fa fa-facebook"></i></a>
-    <a href="#" class="btn btn-info btn-lg" title="Twitter"><i class="fa fa-twitter"></i></a>
-    <a href="#" class="btn btn-danger btn-lg" title="Google"><i class="fa fa-google"></i></a>
-  </div>
-  <div class="or-seperator"><b>or</b></div>
   <div class="inputread">
       <div class="form-group">
         <input type="text" class="form-control input-lg" name="username" placeholder="Username" required="required">
@@ -19,7 +14,12 @@
       </div>
       <div class="text-center small"><a href="#">Forgot Your password?</a></div>
     </div>
-  </form>
-
-  <div class="text-center small">Don't have an account? <a href="#">Sign up</a></div>
+    <div class="social-btn text-center">
+      <a href="#" class="btn btn-primary btn-lg" title="Facebook"><i class="fa fa-facebook"></i></a>
+      <a href="#" class="btn btn-info btn-lg" title="Twitter"><i class="fa fa-twitter"></i></a>
+      <a href="#" class="btn btn-danger btn-lg" title="Google"><i class="fa fa-google"></i></a>
+    </div>
+  <!-- </form> -->
+  </div>
+  <!-- <div class="text-center small">Don't have an account? <a href="#">Sign up</a></div> -->
 </div>
