--- a/recall/src/app/login-alumni/login-alumni.component.css
+++ b/recall/src/app/login-alumni/login-alumni.component.css
@@ -1,4 +1,4 @@
-body {
+.form {
     color: #434343;
     background: #dfe7e9;
     font-family: 'Varela Round', sans-serif;
@@ -20,9 +20,10 @@ body {
     margin: 0 auto;
     padding: 30px 0;
 } */
-.signin-form form {
+ .form {
     /* border-radius: 5px;
     margin-bottom: 20px; */
+    height: 100%;
     background: #fff;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     /* padding: 40px; */
