--- a/recall/src/app/app.component.css
+++ b/recall/src/app/app.component.css
@@ -2,6 +2,7 @@
 .col-md-4,.col-md-8,.col-md-6,.col-md-2,.col-md-3,.col
 {
     /* border: 1px solid black; */
+    padding: 0px;
     height: 40px;
 }
 .header{
@@ -24,11 +25,15 @@
 .left{
     position: fixed;
     padding: 0px;
+    width: 18%;
+}
+.modal-backdrop.fade {
+    opacity: 0.7;
 }
 .center {
-   
-    margin-left: 17.08%;
-    width: 64.47%;
+    background-color: black;
+    margin-left: 18.5%;
+    width: 63.0%;
     padding-left: 0px;
     padding-right: 0px;
      
@@ -39,13 +44,14 @@
     width: 18%;
     position: fixed;
     margin-left: 80%;
+    padding: 0px;
 }
 .nopadding {
     padding: 0 !important;
     margin: 0 !important;
  }
  .center .col{
-    min-height: 555px;
+    min-height: 550px;
  }
  .span12{
      display: flex;
@@ -81,3 +87,7 @@
 .left{height: 100%;}
 .right{height: 100%;}
 .center{height: 100%;} 
+
+.profile{
+    background-color: white;
+}
