--- a/recall/src/app/login-alumni/login-alumni.component.html
+++ b/recall/src/app/login-alumni/login-alumni.component.html
@@ -1,16 +1,16 @@
 <div class="signin-form form">
-  <div class="form">
+  <div class="form" *ngIf="!isLogin">
   <!-- <form action="/examples/actions/confirmation.php" method="post"> -->
-  <h2>Sign in</h2>
+  <h2 style="padding-top: 10px;">Alumni LogIn</h2>
   <div class="inputread">
       <div class="form-group">
-        <input type="text" class="form-control input-lg" name="username" placeholder="Username" required="required">
+        <input type="text" #uname class="form-control input-lg" name="username" [(ngModel)] = "user.username" placeholder="Username" required="required">
       </div>
   <div class="form-group">
-          <input type="password" class="form-control input-lg" name="password" placeholder="Password" required="required">
+          <input type="password" #pwd class="form-control input-lg" name="password" [(ngModel)] = "user.password" placeholder="Password" required="required">
       </div>  
       <div class="form-group">
-          <button type="submit" class="btn btn-success btn-lg btn-block signup-btn">Sign in</button>
+          <button type="submit" class="btn btn-success btn-lg btn-block signup-btn" (click)="validateUser()">Sign in</button>
       </div>
       <div class="text-center small"><a href="#">Forgot Your password?</a></div>
     </div>
@@ -21,6 +21,8 @@
     </div>
   <!-- </form> -->
   </div>
-  
+  <div *ngIf="isLogin">
+    Success
+  </div>
   <!-- <div class="text-center small">Don't have an account? <a href="#">Sign up</a></div> -->
 </div>
