--- a/recall/src/app/app.component.html
+++ b/recall/src/app/app.component.html
@@ -1,51 +1,37 @@
-<header class="header">
-<div class>
-<div class>
-  <div class="row">
-  <div class="col-md-4 selectables">
-    <div class="span12" (click)="about()">
-    Alumni Logo
-    </div>
+<nav class="navbar nav1">
+  <div class="container-fluid">
+      <div class="navbar-header">
+        <div (click)="about()"><img  src="assets/images/recall-logo.jpg" height="40px" alt="LOGO"></div>
+      </div>
+      <p class="navbar-text">Recall Vidyanikethan</p>
   </div>
-  <div class="col-md-8 selectables ">
+</nav>
+<div class="navbar navbar-inverse nav2 sticky-top" role="navigation" style="padding: 0px;">
+  <div class="container-fluid">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar2">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar2" >
+          <ul class="nav navbar-nav cust-nav text-uppercase " >
+              <li class="menuElements">SVET</li>
+              <li class="menuElements">Alumni Chapters</li>
+              <li class="menuElements">Alumni Directory</li>
+              <li class="menuElements">Community</li>
+              <li class="menuElements">Gallery </li>
+              <li class="menuElements" (click)="testimonial();display('gtv')"> Giving to Vidyanikethan </li>
+              <li class="menuElements" (click)="testimonial();display('testimonial')"> Testimonials</li>
+              <li class="menuElements" (click)="testimonial();display('contact')"> Contact Us </li>
+              <div class="hd hidden-md"></div>
+          </ul>
 
-    <div class="span12 leftBorder"> Alumni Association Title</div>
-  </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-4 selectables">
-    <div class="col-md-6 selectables">
-      <div class="span12  "> SVET (link to Vidyanikethan.edu) </div>
-    </div>
-    <div class="col-md-6 selectables">
-      <div class="span12 leftBorder "> Alumni Chapters</div>
-    </div>      
-  </div>
-  <div class="col-md-8 selectables">
-    <div class="col-md-2 selectables">
-      <div class="span12 leftBorder "> Alumni Directory </div>
-    </div>
-    <div class="col-md-2 selectables">
-      <div class="span12 leftBorder "> Community </div>
-    </div>     
-    <div class="col-md-2 selectables">
-      <div class="span12  leftBorder"> Gallery </div>
-    </div>
-    <div class="col-md-2 selectables">
-      <div class="span12 leftBorder " (click)="testimonial();display('gtv')"> Giving to Vidyanikethan </div>
-    </div>     
-    <div class="col-md-2 selectables">
-      <div class="span12 leftBorder " (click)="testimonial();display('testimonial')">Testimonials</div>
-    </div>
-    <div class="col-md-2 selectables">
-      <div class="span12  leftBorder" (click)="testimonial();display('contacts')"> Contacts </div>
-    </div>     
+      </div>
   </div>
 </div>
-</div>
-</header>
 <div class="globalcontainer" >
   <br>
   <div>
@@ -116,6 +102,8 @@ Facebook has been subject to extensive media coverage and many controversies. Th
       </div>
     </div>
     </div>
+
+    
 </div>
 
 
